--- a/all_magazine.html
+++ b/all_magazine.html
@@ -224,7 +224,7 @@
                                     </li>
                                     <li>
                                         <div class="magazinePic">
-                                            <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/magazine/Mag_2020_04.jpeg?raw=true" alt="">
+                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_other_2.png" alt="">
                                         </div>
                                         <button class="moreBtn">
                                             <a href="#">2019年5月</a>
@@ -243,7 +243,7 @@
                                     </li>
                                     <li>
                                         <div class="magazinePic">
-                                            <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/magazine/Mag_2020_05.jpeg?raw=true" alt="">
+                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_other_2.png" alt="">
                                         </div>
                                         <button class="moreBtn">
                                             <a href="#">2019年3月</a>
@@ -251,7 +251,7 @@
                                     </li>
                                     <li>
                                         <div class="magazinePic">
-                                            <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/magazine/Mag_2020_04.jpeg?raw=true" alt="">
+                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_other_2.png" alt="">
                                         </div>
                                         <button class="moreBtn">
                                             <a href="#">2019年2月</a>
