--- a/all_magazine 2020.html
+++ b/all_magazine 2020.html
@@ -69,6 +69,13 @@
                                 <li>
                                     <a href="all_magazine.html"><span>全部年份</span></a>
                                 </li>
+                                <li>
+                                    <i class="fas fa-caret-right"></i>
+                                </li>
+                                <li>
+                                    <a href="all_magazine 2020.html"><span>2020年</span></a>
+                                </li>
+                                
                             </ol>
                             <ol class="selectYears">
                                 <li class="selectMenu">
@@ -161,102 +168,22 @@
                                         </button>
                                     </li>
                                     <li>
-                                        <div class="magazinePic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2019_12.png" alt="">
+                                        <!-- <div class="magazinePic">
+                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2020_01.png" alt="">
                                         </div>
                                         <button class="moreBtn">
-                                            <a href="#">2019年12月</a>
-                                        </button>
+                                            <a href="#">2020年1月</a>
+                                        </button> -->
                                     </li>
                                     <li>
-                                        <div class="magazinePic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2019_11.png" alt="">
+                                        <!-- <div class="magazinePic">
+                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2020_01.png" alt="">
                                         </div>
                                         <button class="moreBtn">
-                                            <a href="#">2019年11月</a>
-                                        </button>
+                                            <a href="#">2020年1月</a>
+                                        </button> -->
                                     </li>
-                                </ol>
-                                <ol class="allMagazineList">
-                                    <h2>All Magazine List</h2>
-                                    <li>
-                                        <div class="magazinePic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2019_10.png" alt="">
-                                        </div>
-                                        <button class="moreBtn">
-                                            <a href="#">2019年10月</a>
-                                        </button>
-                                    </li>
-                                    <li>
-                                        <div class="magazinePic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2019_09.png" alt="">
-                                        </div>
-                                        <button class="moreBtn">
-                                            <a href="#">2019年9月</a>
-                                        </button>
-                                    </li>
-                                    <li>
-                                        <div class="magazinePic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2019_08.png" alt="">
-                                        </div>
-                                        <button class="moreBtn">
-                                            <a href="#">2019年8月</a>
-                                        </button>
-                                    </li>
-                                </ol>
-                                <ol class="allMagazineList">
-                                    <h2>All Magazine List</h2>
-                                    <li>
-                                        <div class="magazinePic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2019_07.png" alt="">
-                                        </div>
-                                        <button class="moreBtn">
-                                            <a href="#">2019年7月</a>
-                                        </button>
-                                    </li>
-                                    <li>
-                                        <div class="magazinePic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_other.png" alt="">
-                                        </div>
-                                        <button class="moreBtn">
-                                            <a href="#">2019年6月</a>
-                                        </button>
-                                    </li>
-                                    <li>
-                                        <div class="magazinePic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_other_2.png" alt="">
-                                        </div>
-                                        <button class="moreBtn">
-                                            <a href="#">2019年5月</a>
-                                        </button>
-                                    </li>
-                                </ol>
-                                <ol class="allMagazineList">
-                                    <h2>All Magazine List</h2>
-                                    <li>
-                                        <div class="magazinePic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_other_2.png" alt="">
-                                        </div>
-                                        <button class="moreBtn">
-                                            <a href="#">2019年4月</a>
-                                        </button>
-                                    </li>
-                                    <li>
-                                        <div class="magazinePic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_other.png" alt="">
-                                        </div>
-                                        <button class="moreBtn">
-                                            <a href="#">2019年3月</a>
-                                        </button>
-                                    </li>
-                                    <li>
-                                        <div class="magazinePic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_other_2.png" alt="">
-                                        </div>
-                                        <button class="moreBtn">
-                                            <a href="#">2019年2月</a>
-                                        </button>
-                                    </li>
+                                    
                                 </ol>
                             </div>
                         </div>
