--- a/all_magazine 2019.html
+++ b/all_magazine 2019.html
@@ -69,6 +69,12 @@
                                 <li>
                                     <a href="all_magazine.html"><span>全部年份</span></a>
                                 </li>
+                                <li>
+                                    <i class="fas fa-caret-right"></i>
+                                </li>
+                                <li>
+                                    <a href="all_magazine 2019.html"><span>2019年</span></a>
+                                </li>
                             </ol>
                             <ol class="selectYears">
                                 <li class="selectMenu">
@@ -96,70 +102,9 @@
                                 </li>
                             </ol>
                             <div class="allMagazine">
+                                
                                 <ol class="allMagazineList">
                                     <h2>All Magazine List</h2>
-                                    <li>
-                                        <div class="magazinePic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2020_07.png" alt="">
-                                        </div>
-                                        <button class="moreBtn">
-                                            <a href="#">2020年7月</a>
-                                        </button>
-                                    </li>
-                                    <li>
-                                        <div class="magazinePic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2020_06-2.png" alt="">
-                                        </div>
-                                        <button class="moreBtn">
-                                            <a href="#">2020年6月</a>
-                                        </button>
-                                    </li>
-                                    <li>
-                                        <div class="magazinePic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2020_05.jpeg" alt="">
-                                        </div>
-                                        <button class="moreBtn">
-                                            <a href="#">2020年5月</a>
-                                        </button>
-                                    </li>
-                                </ol>
-                                <ol class="allMagazineList">
-                                    <h2>All Magazine List</h2>
-                                    <li>
-                                        <div class="magazinePic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2020_04.jpeg" alt="">
-                                        </div>
-                                        <button class="moreBtn">
-                                            <a href="#">2020年4月</a>
-                                        </button>
-                                    </li>
-                                    <li>
-                                        <div class="magazinePic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2020_03.jpeg" alt="">
-                                        </div>
-                                        <button class="moreBtn">
-                                            <a href="#">2020年3月</a>
-                                        </button>
-                                    </li>
-                                    <li>
-                                        <div class="magazinePic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2020_02.png" alt="">
-                                        </div>
-                                        <button class="moreBtn">
-                                            <a href="#">2020年2月</a>
-                                        </button>
-                                    </li>
-                                </ol>
-                                <ol class="allMagazineList">
-                                    <h2>All Magazine List</h2>
-                                    <li>
-                                        <div class="magazinePic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2020_01.png" alt="">
-                                        </div>
-                                        <button class="moreBtn">
-                                            <a href="#">2020年1月</a>
-                                        </button>
-                                    </li>
                                     <li>
                                         <div class="magazinePic">
                                             <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2019_12.png" alt="">
@@ -176,9 +121,6 @@
                                             <a href="#">2019年11月</a>
                                         </button>
                                     </li>
-                                </ol>
-                                <ol class="allMagazineList">
-                                    <h2>All Magazine List</h2>
                                     <li>
                                         <div class="magazinePic">
                                             <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2019_10.png" alt="">
@@ -187,6 +129,9 @@
                                             <a href="#">2019年10月</a>
                                         </button>
                                     </li>
+                                </ol>
+                                <ol class="allMagazineList">
+                                    <h2>All Magazine List</h2>
                                     <li>
                                         <div class="magazinePic">
                                             <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2019_09.png" alt="">
@@ -202,10 +147,6 @@
                                         <button class="moreBtn">
                                             <a href="#">2019年8月</a>
                                         </button>
-                                    </li>
-                                </ol>
-                                <ol class="allMagazineList">
-                                    <h2>All Magazine List</h2>
                                     <li>
                                         <div class="magazinePic">
                                             <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2019_07.png" alt="">
@@ -214,6 +155,9 @@
                                             <a href="#">2019年7月</a>
                                         </button>
                                     </li>
+                                </ol>
+                                <ol class="allMagazineList">
+                                    <h2>All Magazine List</h2>
                                     <li>
                                         <div class="magazinePic">
                                             <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_other.png" alt="">
@@ -230,9 +174,6 @@
                                             <a href="#">2019年5月</a>
                                         </button>
                                     </li>
-                                </ol>
-                                <ol class="allMagazineList">
-                                    <h2>All Magazine List</h2>
                                     <li>
                                         <div class="magazinePic">
                                             <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_other_2.png" alt="">
@@ -241,6 +182,9 @@
                                             <a href="#">2019年4月</a>
                                         </button>
                                     </li>
+                                </ol>
+                                <ol class="allMagazineList">
+                                    <h2>All Magazine List</h2>
                                     <li>
                                         <div class="magazinePic">
                                             <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_other.png" alt="">
@@ -255,6 +199,14 @@
                                         </div>
                                         <button class="moreBtn">
                                             <a href="#">2019年2月</a>
+                                        </button>
+                                    </li>
+                                    <li>
+                                        <div class="magazinePic">
+                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_other.png" alt="">
+                                        </div>
+                                        <button class="moreBtn">
+                                            <a href="#">2019年1月</a>
                                         </button>
                                     </li>
                                 </ol>
