--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
                             <a href="#aboutId"><span>關於大誌</span></a>
                         </li>
                         <li>
-                            <a href="#supportId"><span>訂閱支持</span></a>
+                            <a href="#supportId"><span>支持訂閱</span></a>
                         </li>
                         <li>
                             <a href="#"><span>販售場所</span></a>
