--- a/fixedPoints photo.HTML
+++ b/fixedPoints photo.HTML
@@ -41,11 +41,11 @@
     
 
 
-    <section class="section salePoints">
+    <section class="section salePoints" id="salePointsId">
         <div class="salePointsContainer">
             <h2>販售場所</h2>
             <div class="salePointsContent">
-                <p>販售場所的資訊會即時更新於以下的TBI Map： </p>
+                <p>販售場所的資訊會即時更新於以下的TBI Map：</p>
                 <p>放大或點按販售點即可看到販售時間與販售中的照片方便您找尋販售員</p>
                 <p>當期雜誌以販售員為唯一的銷售通路，過期雜誌也可向販售員購買或透過我們的推廣站支持我們。因每名販售員的生活情境不同，我們會根據其作息及情況加以調整，站點也會不定期更新。</p>
             </div>
@@ -54,15 +54,15 @@
                     frameborder="0"></iframe>
             </div>
         </div>
-        <div class="fixedPoints section">
+        <div class="fixedPoints">
             <div class="fixedPointsContainer">
                 <h2>寄賣據點</h2>
                 <div class="fixedPointTxt">
                     <p>若您想購買非當期的雜誌，您可以前往和我們合作的店家。</p>
                     <p>以下是台灣各地的寄賣場所：</p>
                 </div>
-                <div class="areas">
-                    <div>
+                <div class="taiwanAreas">
+                    <div class="mapsDetail">
                         <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/01-PC/06-place/taiwan.png"
                             usemap="#image-map">
                         <map name="image-map">
