--- a/story_ KaohsiungCity.html
+++ b/story_ KaohsiungCity.html
@@ -267,8 +267,8 @@ D
         crossorigin="anonymous"></script>
     <script type="text/javascript"
         src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    <script src="BigIssue_JavaScript.js"></script>
-    <script src="BigIssue_jQuery.js"></script>
+    <script src="js/BigIssue_JavaScript.js"></script>
+    <script src="js/BigIssue_jQuery.js"></script>
 </body>
 
 </html>
