--- a/story_TaicungYunTech.html
+++ b/story_TaicungYunTech.html
@@ -240,8 +240,8 @@
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
         crossorigin="anonymous"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    <script src="BigIssue_JavaScript.js"></script>
-    <script src="BigIssue_jQuery.js"></script>
+    <script src="js/BigIssue_JavaScript.js"></script>
+    <script src="js/BigIssue_jQuery.js"></script>
 </body>
 
 </html>
