--- a/index.html
+++ b/index.html
@@ -75,6 +75,12 @@
                         <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
                             <div class="carousel-inner">
                                 <div class="carousel-item active" data-interval="4000">
+                                    <img class="showLightBox" src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2020_07.png" class="d-block w-100" alt="...">
+                                    <div class="animate__animated animate__fadeInUp">
+                                        <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/a0821f420283be6d9ddb6181ad381f483712e7a2/material/magazine/section_01_Magzine_main_txt_PC-7.svg">
+                                    </div>
+                                </div>
+                                <div class="carousel-item " data-interval="4000">
                                     <img class="showLightBox" src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/magazine/Mag_2020_06.jpeg?raw=true" class="d-block w-100" alt="...">
                                     <div class="animate__animated animate__fadeInUp">
                                         <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/9296840f46f38487e9dd36fd6c496e7f7225be6d/material/magazine/section_01_Magzine_main_txt_PC-6.svg">
