--- a/all_magazine.html
+++ b/all_magazine.html
@@ -276,16 +276,16 @@
                            <a href="all_magazine.html"><span>各期雜誌</span></a>
                         </li>
                         <li>
-                            <a href="#salesId"><span>銷售群像</span></a>
+                            <a href="story_allArea.html"><span>銷售群像</span></a>
                         </li>
                         <li>
-                            <a href="#aboutId"><span>關於大誌</span></a>
+                            <a href="index.html#aboutId"><span>關於大誌</span></a>
                         </li>
                         <li>
-                            <a href="#"><span>訂閱支持</span></a>
+                            <a href="index.html#supportId"><span>訂閱支持</span></a>
                         </li>
                         <li>
-                            <a href="#"><span>販售場所</span></a>
+                            <a href="index.html#salePointsId"><span>販售場所</span></a>
                         </li>
                     </ul>
                 </nav>
