--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                         </ol>
                     </div> -->
                     <button class="moreBtn">
-                        <a href="#">預覽更多雜誌</a>
+                        <a href="all_magazine.html">預覽更多雜誌</a>
                     </button>
                 </section>
 
@@ -180,7 +180,7 @@
                                         <p>秋燕因從小患有腦性麻痺，所以外出都需要靠電動輪椅代步。以前完全沒有做過任何工作，她說自己試圖找過許多工作，但都沒公司要聘雇她，因為都是要熟悉電腦文書作業或是四肢健全的清潔工作，這些看似最基本的能力要求，對秋燕來說卻是難如登天……</p>
                                     </div>
                                     <button class="moreBtn">
-                                        <a href="story_allArea.html">Read More</a>
+                                        <a href="story_TaipeiYuanshan.html">Read More</a>
                                     </button>
                                 </li>
                                 <li>
@@ -193,7 +193,7 @@
                                         <p>最早以前，邱伯伯的第一份工作是在電器行，邊賣電器兼維修，後來就換到西藥原料工廠當員工，工廠之後遷到桃園工作，藥廠的工作一待就十五年了。邱伯伯在六十歲以前辦理提前退休，因為好像身體開始會對藥粉過敏，感覺對身體不好，所以決定退休……</p>
                                     </div>
                                     <button class="moreBtn">
-                                        <a href="story_allArea.html">Read More</a>
+                                        <a href="story_TaipeiLongshanTemple.html">Read More</a>
                                     </button>
                                 </li>
                             </ul>
@@ -208,7 +208,7 @@
                                         <p>在投入賣雜誌之前，高姐遇到販售員子承，子承就帶她到雜誌社初步瞭解工作內容，高姐就這樣開始從賣玉蘭花變成賣雜誌。平常早上除了賣玉蘭花，下午又多了一份賣雜誌的工作，這樣一來生活的收入開始有明顯的改善，之前僅靠賣玉蘭花，對高姐來說相當微薄……</p>
                                     </div>
                                     <button class="moreBtn">
-                                        <a href="story_allArea.html">Read More</a>
+                                        <a href="story_TaipeiNTUH.html">Read More</a>
                                     </button>
                                 </li>
                                 <li>
@@ -221,7 +221,7 @@
                                         <p>麗秋在旅遊業工作了十年之後，帶團出國真的很辛苦，身體要能應付時差的疲倦感，又要處理旅客的各種疑難雜症。後來，轉換跑道去美語補習班當美語老師，服務了一段時間，同時也在這時間點上，麗秋開始有失眠症狀，這症狀也逐日影響到她的教學工作⋯⋯</p>
                                     </div>
                                     <button class="moreBtn">
-                                        <a href="story_allArea.html">Read More</a>
+                                        <a href="story_ HsinchuTrainStation.html">Read More</a>
                                     </button>
                                 </li>
                             </ul>
@@ -236,7 +236,7 @@
                                         <p>因為一場從三樓墜落的工安意外導致陳大哥脊椎粉碎性骨折，目前仍在努力復健中，人生雖遭逢如此劇變，但陳大哥還是很樂觀的面對一切。手術後每天坐也坐不好，躺也躺不好。但是，脊椎損傷的關係，有很多工作都無法勝任……</p>
                                     </div>
                                     <button class="moreBtn">
-                                        <a href="story_allArea.html">Read More</a>
+                                        <a href="story_TaichungEslite.html">Read More</a>
                                     </button>
                                 </li>
                                 <li>
@@ -249,7 +249,7 @@
                                         <p>2016年宛純搬來亞葵小鎮生活，這裏是一個提供精神復健的場域，過去曾對人群恐慌，內心時時充滿負面情緒且感到焦慮，在老師的細心陪伴與支持下，她重新尋回正向、積極的自我，並努力找回重返社會的動能……</p>
                                     </div>
                                     <button class="moreBtn">
-                                        <a href="story_allArea.html">Read More</a>
+                                        <a href="story_YunlinYunTech.html">Read More</a>
                                     </button>
                                 </li>
                             </ul>
@@ -457,17 +457,17 @@
                     <li>
                         <ul class="footerSocial">
                             <li>
-                                <a href="#">
+                                <a href="https://zh-tw.facebook.com/bigissue.tw">
                                     <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_fb.svg" alt="">
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
+                                <a href="https://www.instagram.com/bigissue.tw/">
                                     <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_ig.svg" alt="">
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
+                                <a href="mailto:service@bigissue.tw">
                                     <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_email.svg" alt="">
                                 </a>
                             </li>
