--- a/index.html
+++ b/index.html
@@ -450,9 +450,8 @@
             <div class="footerContent">
                 <ul class="footerInfo">
                     <li>
-                        <div class="fooerLogo">
-                            <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/01-PC/07-footer/fotterLogo.png?raw=true" alt="">
-                        </div>
+                        <a href="index.html"><img a src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/01-PC/07-footer/fotterLogo.png?raw=true"
+                            alt=""></a>
                     </li>
                     <li>
                         <ul class="footerSocial">
