--- a/story_TaipeiLongshanTemple.html
+++ b/story_TaipeiLongshanTemple.html
@@ -20,7 +20,7 @@
     <meta property="og:side_name" content="">
     <meta property="fb:app_id" content="">
 
-    <title>Story Taichung Eslite</title>
+    <title>Story Taipei LongshanTemple</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
@@ -92,8 +92,7 @@
                                         <div class="picTxt">
                                             <!-- 文字要改 -->
                                             <p>「以前我有一個日本名字喔！是我父親取的，後來國民政府來台才換成現在的中文名字，
-                                                我的名字原本是叫小山信吉！」每當聊到邱伯伯兒時的回憶時，他總是充滿微笑，不過他
-                                                目前最大的心願是，希望賣雜誌的收入能足夠讓他換新的假牙！</p>
+                                                我的名字原本是叫小山信吉！」每當聊到邱伯伯兒時的回憶時，他總是充滿微笑，不過他目前最大的心願是，希望賣雜誌的收入能足夠讓他換新的假牙</p>
                                             <p class="salesName">台北捷運龍山寺站 / 邱伯伯</p>
                                         </div>
                                     </div>
@@ -101,34 +100,19 @@
                                         <!-- 段落文字要改 -->
                                         <p>「最早以前的第一份工作是在電器行，邊賣電器兼維修，後來就換到西藥原料工
                                             廠當員工，工廠之後遷到桃園，我就換到桃園工作，藥廠的工作一待就十五年
-                                            了，然後我在六十歲以前辦理提前退休，因為好像身體開始會對藥粉過敏吧，
-                                            感覺那藥粉對身體很不好，有一些同事比我還早離開工廠，所以我才決定退休
+                                            了，然後我在六十歲以前辦理提前退休，因為好像身體開始會對藥粉過敏吧，感覺那藥粉對身體很不好，有一些同事比我還早離開工廠，所以我才決定退休
                                             。」</p>
                                         <p>邱伯伯是第一屆的銷售員，從四月到七月都一直在龍山寺站販售雜誌，26年次
                                             的他曾經受過幾年日本教育，小時後就隨著父親從斗六北上，住在西門市場一
-                                            帶（今西門紅樓），他的父親曾經在台灣郵電局服務，以當時公務人員薪資，
-                                            要在台北維持一個小康家庭也是辛苦的，但對邱伯伯而言，台北城的童年記憶
+                                            帶（今西門紅樓），他的父親曾經在台灣郵電局服務，以當時公務人員薪資，要在台北維持一個小康家庭也是辛苦的，但對邱伯伯而言，台北城的童年記憶
                                             是快樂的！
                                             賣玉蘭花要很早出門補貨，搬運與串花加工對他而言也不容易，賣刮刮樂又擔心如果全被搶走了也追不到，陳大哥想來想去還是覺得賣雜誌比較好，至少沒人會搶雜誌。
                                         </p>
-                                        <p>「有一天去萬華社會局時，在電梯裡看到大誌雜誌的說明會傳單，就想說去試
-                                            試看好了，不然也一大把年紀了，根本不可能找到工作啊！」之後邱伯伯就到
-                                            活水泉及燈塔教會參加說明會，四月一日開始在龍山寺站賣雜誌，猶記得第一
-                                            天首賣日的傍晚，邱伯伯站在一號出口，用微弱的聲音念著：「大誌雜誌，一
-                                            本一百！」後來接連著有兩位路人前來跟他購買時，他的臉上露出開懷的笑容
-                                            和三顆牙齒！</p>
-                                        <p>退休之後邱伯伯就再也沒有找到穩定的工作了，由於父親生前有留下一間房子
-                                            ，後來整建更新後他有分配到一間公寓，所以晚年至少還有一個安身的住所。
-                                            「以前我有一個日本名字喔！是我父親取的，後來國民政府來台才換成現在的
-                                            中文名字，我的名字原本是叫小山信吉！」每當聊到邱伯伯兒時的回憶時，他
-                                            總是充滿微笑，不過他目前最大的心願是，希望賣雜誌的收入能足夠讓他換新
-                                            的假牙！「年紀大了，沒有牙齒實在很難吃東西。」邱伯伯很沮喪的說著。
-                                            然而，其實邱伯伯更嚮往的事是，搬回自己的公寓，那間父親留給他的公寓
-                                            ……。
-                                            從創刊號在便利商店看到時就覺得很不錯，但後來僅有台北的街友有販售，現在終於在台中也能買到！每個月一定都會來跟陳大哥買。」這裡是台中最熱門的新興地點，每天人來人往，但陳大哥也沒有延長販售時間的打算，他覺得日子過的去就好了。在收工邊收拾書包的同時，還一邊跟下個月將參加指考的林同學叮嚀要認真準備考試，努力實踐自己的夢想。
+                                        <p>「有一天去萬華社會局時，在電梯裡看到大誌雜誌的說明會傳單，就想說去試試看好了，不然也一大把年紀了，根本不可能找到工作啊！」之後邱伯伯就到活水泉及燈塔教會參加說明會，四月一日開始在龍山寺站賣雜誌，猶記得第一天首賣日的傍晚，邱伯伯站在一號出口，用微弱的聲音念著：「大誌雜誌，一本一百！」後來接連著有兩位路人前來跟他購買時，他的臉上露出開懷的笑容和三顆牙齒！
                                         </p>
-                                        <p>龍山寺站週邊的商圈燈火逐漸明亮，人群熙來攘往的在我們身邊遊走，邱伯伯
-                                            心繫著賣出雜誌，而我卻納悶著何以七十多歲的他無法回到屬於自已的家？</p>
+                                        <p>退休之後邱伯伯就再也沒有找到穩定的工作了，由於父親生前有留下一間房子，後來整建更新後他有分配到一間公寓，所以晚年至少還有一個安身的住所。「以前我有一個日本名字喔！是我父親取的，後來國民政府來台才換成現在的中文名字，我的名字原本是叫小山信吉！」每當聊到邱伯伯兒時的回憶時，他總是充滿微笑，不過他目前最大的心願是，希望賣雜誌的收入能足夠讓他換新的假牙！「年紀大了，沒有牙齒實在很難吃東西。」邱伯伯很沮喪的說著。然而，其實邱伯伯更嚮往的事是，搬回自己的公寓，那間父親留給他的公寓……。從創刊號在便利商店看到時就覺得很不錯，但後來僅有台北的街友有販售，現在終於在台中也能買到！每個月一定都會來跟陳大哥買。」這裡是台中最熱門的新興地點，每天人來人往，但陳大哥也沒有延長販售時間的打算，他覺得日子過的去就好了。在收工邊收拾書包的同時，還一邊跟下個月將參加指考的林同學叮嚀要認真準備考試，努力實踐自己的夢想。
+                                        </p>
+                                        <p>龍山寺站週邊的商圈燈火逐漸明亮，人群熙來攘往的在我們身邊遊走，邱伯伯心繫著賣出雜誌，而我卻納悶著何以七十多歲的他無法回到屬於自已的家？</p>
                                     </div>
                                 </div>
                             </article>
@@ -140,7 +124,9 @@
 
         <div class="asideBar">
             <div class="asideLogo">
-                <a href="index.html"><img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/logo/Nav_logo-01.png?raw=true" alt="Aside Big Issue Logo"></a>
+                <a href="index.html"><img
+                        src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/logo/Nav_logo-01.png?raw=true"
+                        alt="Aside Big Issue Logo"></a>
             </div>
             <nav>
                 <h2>Aside Navigation</h2>
@@ -155,10 +141,10 @@
                         <a href="index.html#aboutId">關於大誌</a>
                     </li>
                     <li>
-                        <a href="#">訂閱支持</a>
+                        <a href="index.html#supportId">訂閱支持</a>
                     </li>
                     <li>
-                        <a href="#">販售場所</a>
+                        <a href="index.html#salePointsId">販售場所</a>
                     </li>
                 </ul>
             </nav>
@@ -170,28 +156,25 @@
                 <ul class="footerInfo">
                     <li>
                         <div class="fooerLogo">
-                            <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/01-PC/07-footer/fotterLogo.png?raw=true"
-                                alt="">
+                            <a href="index.html"><img a src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/01-PC/07-footer/fotterLogo.png?raw=true"
+                                alt=""></a>
                         </div>
                     </li>
                     <li>
                         <ul class="footerSocial">
                             <li>
-                                <a href="#">
-                                    <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_fb.svg"
-                                        alt="">
+                                <a href="https://zh-tw.facebook.com/bigissue.tw">
+                                    <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_fb.svg" alt="">
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
-                                    <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_ig.svg"
-                                        alt="">
+                                <a href="https://www.instagram.com/bigissue.tw/">
+                                    <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_ig.svg" alt="">
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
-                                    <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_email.svg"
-                                        alt="">
+                                <a href="mailto:service@bigissue.tw">
+                                    <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_email.svg" alt="">
                                 </a>
                             </li>
                         </ul>
