--- a/story_YunlinYunTech.html
+++ b/story_YunlinYunTech.html
@@ -20,7 +20,7 @@
     <meta property="og:side_name" content="">
     <meta property="fb:app_id" content="">
 
-    <title>Story Taichung Eslite</title>
+    <title>Story Yunlin YunTech</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
@@ -50,7 +50,7 @@
                                     <a href="story_TaichungEslite.html">上一則</a>
                                 </li>
                                 <li>
-                                    <a href="story_TaicungYunTech.html">本則</a>
+                                    <a href="story_YunlinYunTech.html">本則</a>
                                 </li>
                                 <li>
                                     <a href="story_ DouliuTrainStation.html">下一則</a>
@@ -73,7 +73,7 @@
                                 </li>
                                 <!-- 區域所在位置名稱 -->
                                 <li>
-                                    <a href="story_TaicungYunTech.html"><span>雲林科技大學</span></a>
+                                    <a href="story_YunlinYunTech.html"><span>雲林科技大學</span></a>
                                 </li>
                             </ol>
                             <article>
@@ -150,10 +150,10 @@
                         <a href="index.html#aboutId">關於大誌</a>
                     </li>
                     <li>
-                        <a href="#">訂閱支持</a>
+                        <a href="index.html#supportId">訂閱支持</a>
                     </li>
                     <li>
-                        <a href="#">販售場所</a>
+                        <a href="index.html#salePointsId">販售場所</a>
                     </li>
                 </ul>
             </nav>
@@ -165,28 +165,24 @@
                 <ul class="footerInfo">
                     <li>
                         <div class="fooerLogo">
-                            <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/01-PC/07-footer/fotterLogo.png?raw=true"
-                                alt="">
-                        </div>
+                            <a href="index.html"><img a src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/01-PC/07-footer/fotterLogo.png?raw=true"
+                                alt=""></a>
                     </li>
                     <li>
                         <ul class="footerSocial">
                             <li>
-                                <a href="#">
-                                    <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_fb.svg"
-                                        alt="">
+                                <a href="https://zh-tw.facebook.com/bigissue.tw">
+                                    <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_fb.svg" alt="">
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
-                                    <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_ig.svg"
-                                        alt="">
+                                <a href="https://www.instagram.com/bigissue.tw/">
+                                    <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_ig.svg" alt="">
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
-                                    <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_email.svg"
-                                        alt="">
+                                <a href="mailto:service@bigissue.tw">
+                                    <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_email.svg" alt="">
                                 </a>
                             </li>
                         </ul>
