--- a/story_allArea.html
+++ b/story_allArea.html
@@ -191,7 +191,7 @@
                                                 的細心陪伴與支持協助下，她重新尋回正向、積極的自我，並努力找回重返社會的動能
                                                 ……</p>
                                             <button class="moreBtn">
-                                                <a href="story_TaicungYunTech.html">看完整故事</a>
+                                                <a href="story_YunlinYunTech.html">看完整故事</a>
                                             </button>
                                         </div>
                                     </li>
