--- a/story_eastArea.html
+++ b/story_eastArea.html
@@ -18,7 +18,7 @@
     <meta property="og:side_name" content="">
     <meta property="fb:app_id" content="">
 
-    <title>Story Taichung Eslite</title>
+    <title>Story EastArea</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link rel="stylesheet" href="css/reset.css">
@@ -162,10 +162,10 @@
                         <a href="index.html#aboutId">關於大誌</a>
                     </li>
                     <li>
-                        <a href="#">訂閱支持</a>
+                        <a href="index.html#supportId">訂閱支持</a>
                     </li>
                     <li>
-                        <a href="#">販售場所</a>
+                        <a href="index.html#salePointsId">販售場所</a>
                     </li>
                 </ul>
             </nav>
@@ -183,17 +183,17 @@
                     <li>
                         <ul class="footerSocial">
                             <li>
-                                <a href="#">
+                                <a href="https://zh-tw.facebook.com/bigissue.tw">
                                     <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_fb.svg" alt="">
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
+                                <a href="https://www.instagram.com/bigissue.tw/">
                                     <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_ig.svg" alt="">
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
+                                <a href="mailto:service@bigissue.tw">
                                     <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_email.svg" alt="">
                                 </a>
                             </li>
