--- a/story_ KaohsiungCity.html
+++ b/story_ KaohsiungCity.html
@@ -3,10 +3,8 @@ D
 <html lang="en">
 
 <head>
-    <meta http-equive="Content-type" content="text/html" ;
-        charset="UTF-8">
-    <meta http="X-UA-Compatible"
-        content="ie=edge, chrome=1">
+    <meta http-equive="Content-type" content="text/html" ; charset="UTF-8">
+    <meta http="X-UA-Compatible" content="ie=edge, chrome=1">
     <meta name="viewport"
         content="width=device-width, user-scalable=yes, initial-scale=1.0, maximum-scale=2.0, shrink-to-fit=no">
 
@@ -23,16 +21,12 @@ D
     <meta property="og:side_name" content="">
     <meta property="fb:app_id" content="">
 
-    <title>Story Taichung Eslite</title>
-    <link rel="stylesheet"
-        href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
-        crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css"
-        href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+    <title>Ｓtory　KaohsiungCity</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css">
     <link rel="stylesheet" href="css/BigIssueAll.min.css">
 </head>
 
@@ -67,31 +61,27 @@ D
                         <div class="storyContent">
                             <ol class="storyBreadCrumb">
                                 <li>
-                                    <a href="#"><span>HOME</span></a>
+                                    <a href="index.html"><span>HOME</span></a>
                                 </li>
                                 <li>
-                                    <i
-                                        class="fas fa-caret-right"></i>
+                                    <i class="fas fa-caret-right"></i>
                                 </li>
                                 <li>
-                                    <a href="#"><span>南部地區</span></a>
+                                    <a href="story_southArea.html"><span>南部地區</span></a>
                                 </li>
                                 <li>
-                                    <i
-                                        class="fas fa-caret-right"></i>
+                                    <i class="fas fa-caret-right"></i>
                                 </li>
                                 <!-- 區域所在位置名稱 -->
                                 <li>
-                                    <a href="#"><span>高雄城市光廊&高醫大</span></a>
+                                    <a href="story_ KaohsiungCity.html"><span>高雄城市光廊&高醫大</span></a>
                                 </li>
                             </ol>
                             <article>
                                 <div class="storyArticle">
-                                    <div
-                                        class="storyPicDescription">
+                                    <div class="storyPicDescription">
                                         <!-- 圖片要換，h3 要改 -->
-                                        <div
-                                            class="storyPic">
+                                        <div class="storyPic">
                                             <figure>
                                                 <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/sales/sales_09.png?raw=true"
                                                     alt="">
@@ -103,45 +93,25 @@ D
                                         </div>
                                         <div class="picTxt">
                                             <!-- 文字要改 -->
-                                            <p>「最近終於租了一間月租兩千元的矮厝，洗澡睡覺比較方便，之前也睡過網咖，但有間自
-                                                己的空間還是比較自在。」五點多下班、放學的人潮開始流動，貴仔也下班休息。用完餐
-                                                後，六點準時上班繼續賣到九點，然後在騎著腳踏車回矮厝睡覺，迎接明天一整天的工作
-                                                。
+                                            <p>「最近終於租了一間月租兩千元的矮厝，洗澡睡覺比較方便，之前也睡過網咖，但有間自己的空間還是比較自在。」五點多下班、放學的人潮開始流動，貴仔也下班休息。用完餐後，六點準時上班繼續賣到九點，然後在騎著腳踏車回矮厝睡覺，迎接明天一整天的工作。
                                             </p>
-                                            <p
-                                                class="salesName">
+                                            <p class="salesName">
                                                 高雄城市光廊&高醫大 / 柯石貴</p>
                                         </div>
                                     </div>
-                                    <div
-                                        class="storyTxtContent">
+                                    <div class="storyTxtContent">
                                         <!-- 段落文字要改 -->
-                                        <p>從2013年十月開始，大誌雜誌終於來到高雄開賣，其中一個據點就在國際建築大師理查・
-                                            羅傑斯所設計的 R9 站體附近，中央公園站旁的城市光廊入口處，柯大哥（貴仔）的腳踏
-                                            車就直率地停在轉角的行道樹下，顯眼易找。貴仔說：「我早上八點到十二點在高師大校
-                                            門口賣，下午一點到晚上九點就來中央公園賣，每天賣的時間很長，這樣客人比較好找。
-                                            從去年十月就固定在這兩個地點賣雜誌了。」（編按：目前已改至高醫大與城市光廊販售
-                                            ） .
+                                        <p>從2013年十月開始，大誌雜誌終於來到高雄開賣，其中一個據點就在國際建築大師理查・羅傑斯所設計的 R9
+                                            站體附近中央公園站旁的城市光廊入口處，柯大哥（貴仔）的腳踏車就直率地停在轉角的行道樹下，顯眼易找。貴仔說：「我早上八點到十二點在高師大校門口賣，下午一點到晚上九點就來中央公園賣，每天賣的時間很長，這樣客人比較好找。從去年十月就固定在這兩個地點賣雜誌了。」（編按：目前已改至高醫大與城市光廊販售）
+                                            .
                                         </p>
-                                        <p>在這段閑晃的日子裡，貴仔偶爾也會去撿些舊物到跳蚤市場賣，賺點現金買米酒喝。貴仔
-                                            說：「這幾年高雄很多地方在拆老房子，像左營眷村啦、中都窯廠啦，還有一些零星的舊
-                                            厝，大家都會交流拆屋資訊，我的腳踏車後面還綁一個大籃子，就四處去搜、去撿，然後
-                                            運到十全路跳蚤市場便宜賣，好一點一天賺個兩、三百塊，但現在都不能擺攤了，警察會
-                                            趕人，房子也拆光沒東西撿了。」​​
+                                        <p>在這段閑晃的日子裡，貴仔偶爾也會去撿些舊物到跳蚤市場賣，賺點現金買米酒喝。貴仔說：「這幾年高雄很多地方在拆老房子，像左營眷村啦、中都窯廠啦，還有一些零星的舊厝，大家都會交流拆屋資訊，我的腳踏車後面還綁一個大籃子，就四處去搜、去撿，然後運到十全路跳蚤市場便宜賣，好一點一天賺個兩、三百塊，但現在都不能擺攤了，警察會趕人，房子也拆光沒東西撿了。」​​
                                         </p>
-                                        <p>1989年左右，貴仔曾經在海上待過一段時間，貴仔說：「我對年代還有點印象，是因為記
-                                            得當年在海外聽到歌星張帝選上立法委員了。我們都會聽他的歌，當時歌星選上立委還滿
-                                            特別的。」起先貴仔是在近洋的拖網漁船當三副，但後來捕不到什麼魚，再加上流刺網被
-                                            管制使用，貴仔就換到遠洋漁船當二副，一趟三年半的鮪釣船，從前鎮漁港航行到薩摩亞
-                                            ，但還是捕不到魚，船長堅持繼續找魚，貴仔就下船留在薩摩亞，幫從臺灣移民到當地的
-                                            朋友種田，最後貴仔因非法居留而被遣送回臺灣，結束了他的船員生涯。</p>
-                                        <p>「「回臺灣後，一直沒有找到穩定的工作，後來就在公園一天度過一天。現在努力賣雜誌後
-                                            生活有點改善，記得剛開始賣的前兩個月真的賣得很不好，十二月號陳綺貞做封面時就賣
-                                            得不錯，然後一月號的田馥甄也賣很多本，接著就越來越穩定了，最近終於租了一間月租
-                                            兩千元的矮厝，洗澡睡覺比較方便，之前也睡過網咖，但有間自己的空間還是比較自在
-                                            。」。五點多下班、放學的人潮開始在中央公園流動，貴仔也下班休息吃晚餐，用完餐後
-                                            ，六點準時上班繼續賣到九點，然後在騎著腳踏車回矮厝睡覺，迎接明天一整天的工作。</p>
-                                    
+                                        <p>1989年左右，貴仔曾經在海上待過一段時間，貴仔說：「我對年代還有點印象，是因為記得當年在海外聽到歌星張帝選上立法委員了。我們都會聽他的歌，當時歌星選上立委還滿特別的。」起先貴仔是在近洋的拖網漁船當三副，但後來捕不到什麼魚，再加上流刺網被管制使用，貴仔就換到遠洋漁船當二副，一趟三年半的鮪釣船，從前鎮漁港航行到薩摩亞，但還是捕不到魚，船長堅持繼續找魚，貴仔就下船留在薩摩亞，幫從臺灣移民到當地的朋友種田，最後貴仔因非法居留而被遣送回臺灣，結束了他的船員生涯。
+                                        </p>
+                                        <p>「回臺灣後，一直沒有找到穩定的工作，後來就在公園一天度過一天。現在努力賣雜誌後生活有點改善，記得剛開始賣的前兩個月真的賣得很不好，十二月號陳綺貞做封面時就賣得不錯，然後一月號的田馥甄也賣很多本，接著就越來越穩定了，最近終於租了一間月租兩千元的矮厝，洗澡睡覺比較方便，之前也睡過網咖，但有間自己的空間還是比較自在。」。五點多下班、放學的人潮開始在中央公園流動，貴仔也下班休息吃晚餐，用完餐後，六點準時上班繼續賣到九點，然後在騎著腳踏車回矮厝睡覺，迎接明天一整天的工作。
+                                        </p>
+
 
                                     </div>
                                 </div>
@@ -154,28 +124,27 @@ D
 
         <div class="asideBar">
             <div class="asideLogo">
-                <a href="index.html"><img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/logo/Nav_logo-01.png?raw=true" alt="Aside Big Issue Logo"></a>
+                <a href="index.html"><img
+                        src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/logo/Nav_logo-01.png?raw=true"
+                        alt="Aside Big Issue Logo"></a>
             </div>
             <nav>
                 <h2>Aside Navigation</h2>
                 <ul class="asideNavBarList">
                     <li>
-                        <a
-                            href="index.html#issueId">各期雜誌</a>
+                        <a href="index.html#issueId">各期雜誌</a>
                     </li>
                     <li>
-                        <a
-                            href="index.html#salesId">銷售群像</a>
+                        <a href="index.html#salesId">銷售群像</a>
                     </li>
                     <li>
-                        <a
-                            href="index.html#aboutId">關於大誌</a>
+                        <a href="index.html#aboutId">關於大誌</a>
                     </li>
                     <li>
-                        <a href="#">訂閱支持</a>
+                        <a href="index.html#supportId">訂閱支持</a>
                     </li>
                     <li>
-                        <a href="#">販售場所</a>
+                        <a href="index.html#salePointsId">販售場所</a>
                     </li>
                 </ul>
             </nav>
@@ -187,28 +156,26 @@ D
                 <ul class="footerInfo">
                     <li>
                         <div class="fooerLogo">
-                            <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/01-PC/07-footer/fotterLogo.png?raw=true"
-                                alt="">
+                            <a href="index.html"><img a src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/01-PC/07-footer/fotterLogo.png?raw=true"
+                                alt=""></a>
+                            
                         </div>
                     </li>
                     <li>
                         <ul class="footerSocial">
                             <li>
-                                <a href="#">
-                                    <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_fb.svg"
-                                        alt="">
+                                <a href="https://zh-tw.facebook.com/bigissue.tw">
+                                    <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_fb.svg" alt="">
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
-                                    <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_ig.svg"
-                                        alt="">
+                                <a href="https://www.instagram.com/bigissue.tw/">
+                                    <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_ig.svg" alt="">
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
-                                    <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_email.svg"
-                                        alt="">
+                                <a href="mailto:service@bigissue.tw">
+                                    <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_email.svg" alt="">
                                 </a>
                             </li>
                         </ul>
@@ -251,22 +218,17 @@ D
 
     <!-- ---------------- 以下不要動 ---------------- -->
 
-    <script src="https://kit.fontawesome.com/ee6524aae5.js"
-        crossorigin="anonymous"></script>
-    <script
-        src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    <script src="https://kit.fontawesome.com/ee6524aae5.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
-    <script
-        src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft   +2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
         crossorigin="anonymous"></script>
-    <script
-        src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
         crossorigin="anonymous"></script>
-    <script type="text/javascript"
-        src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="js/BigIssue_JavaScript.js"></script>
     <script src="js/BigIssue_jQuery.js"></script>
 </body>
