--- a/story_TaichungEslite.html
+++ b/story_TaichungEslite.html
@@ -48,7 +48,7 @@
                                     <a href="story_TaichungEslite.html">本則</a>
                                 </li>
                                 <li>
-                                    <a href="story_TaicungYunTech.html">下一則</a>
+                                    <a href="story_YunlinYunTech.html">下一則</a>
                                 </li>
                             </ol>
                         </div>
@@ -114,19 +114,19 @@
                 <h2>Aside Navigation</h2>
                 <ul class="asideNavBarList">
                     <li>
-                        <a href="#issueId"><span>各期雜誌</span></a>
+                        <a href="index.html#issueId"><span>各期雜誌</span></a>
                     </li>
                     <li>
-                        <a href="#salesId"><span>銷售群像</span></a>
+                        <a href="index.html#salesId"><span>銷售群像</span></a>
                     </li>
                     <li>
-                        <a href="#aboutId"><span>關於大誌</span></a>
+                        <a href="index.html#aboutId"><span>關於大誌</span></a>
                     </li>
                     <li>
-                        <a href="#"><span>訂閱支持</span></a>
+                        <a href="index.html#supportId"><span>訂閱支持</span></a>
                     </li>
                     <li>
-                        <a href="#"><span>販售場所</span></a>
+                        <a href="index.html#salePointsId"><span>販售場所</span></a>
                     </li>
                     </ul>
                 </nav>
@@ -138,23 +138,25 @@
                 <ul class="footerInfo">
                     <li>
                         <div class="fooerLogo">
-                            <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/01-PC/07-footer/fotterLogo.png?raw=true" alt="">
+                            <a href="index.html"><img a src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/01-PC/07-footer/fotterLogo.png?raw=true"
+                                alt=""></a>
+                            
                         </div>
                     </li>
                     <li>
                         <ul class="footerSocial">
                             <li>
-                                <a href="#">
+                                <a href="https://zh-tw.facebook.com/bigissue.tw">
                                     <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_fb.svg" alt="">
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
+                                <a href="https://www.instagram.com/bigissue.tw/">
                                     <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_ig.svg" alt="">
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
+                                <a href="mailto:service@bigissue.tw">
                                     <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_email.svg" alt="">
                                 </a>
                             </li>
