--- a/story_TaipeiNTUH.html
+++ b/story_TaipeiNTUH.html
@@ -20,7 +20,7 @@
     <meta property="og:side_name" content="">
     <meta property="fb:app_id" content="">
 
-    <title>Story Taichung Eslite</title>
+    <title>story Taipei NTUH</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
@@ -60,20 +60,20 @@
                         <div class="storyContent">
                             <ol class="storyBreadCrumb">
                                 <li>
-                                    <a href="#"><span>HOME</span></a>
+                                    <a href="index.html"><span>HOME</span></a>
                                 </li>
                                 <li>
                                     <i class="fas fa-caret-right"></i>
                                 </li>
                                 <li>
-                                    <a href="#"><span>北部地區</span></a>
+                                    <a href="story_northArea.html"><span>北部地區</span></a>
                                 </li>
                                 <li>
                                     <i class="fas fa-caret-right"></i>
                                 </li>
                                 <!-- 區域所在位置名稱 -->
                                 <li>
-                                    <a href="#"><span>台北捷運台大醫院站</span></a>
+                                    <a href="story_TaipeiNTUH.html"><span>台北捷運台大醫院站</span></a>
                                 </li>
                             </ol>
                             <article>
@@ -91,42 +91,21 @@
                                         </div>
                                         <div class="picTxt">
                                             <!-- 文字要改 -->
-                                            <p>「為了還願吧！」高姐帶有宗教玄機的口吻說著。「玉蘭花我已經賣四年了，都在台北車
-                                                站或台大醫院西址這一帶，每天清晨大約三、四點就去批花，大約六點多就到這附近來賣
-                                                花，賣到十點多就差不多收工了，休息一下後，中午再開始賣雜誌，每天都還滿規律的
-                                                。」</p>
+                                            <p>「為了還願吧！」高姐帶有宗教玄機的口吻說著「玉蘭花我已經賣四年了，都在台北車站或台大醫院西址這一帶，每天清晨大約三、四點就去批花，大約六點多就到這附近來賣花，賣到十點多就差不多收工了，休息一下後，中午再開始賣雜誌，每天都還滿規律的。」
+                                            </p>
                                             <p class="salesName">台北捷運臺大醫院站 / 高姐</p>
                                         </div>
                                     </div>
                                     <div class="storyTxtContent">
                                         <!-- 段落文字要改 -->
-                                        <p>週五的中午，台大醫院站二號出口有許多正要去吃午餐的人潮，高姐並沒有站
-                                            在明顯的位置，她坐在捷運站出口旁的矮牆上，若不仔細找還很難發現她。「
-                                            我先休息一下，那裡有警察在巡邏，為了避免不必要的麻煩還是先收起來好了
-                                            ！」高姐小聲地說著尷尬的處境。已經來台大醫院站販售雜誌近一年的高姐，
-                                            其實並沒有遇到太多的糾舉，如果可能的話，只要一發現有警察或站務人員走
-                                            進，她就會先低調地閃避。</p>
-                                        <p>「當初會來賣雜誌是因為在台大醫院這裡遇到一位販售員，我當時在附近賣玉
-                                            蘭花，然後看他賣得很不錯，就問他要怎麼做這份工作。」大約一年前，高姐
-                                            遇到販售員子承，子承就帶她到雜誌社初步瞭解工作內容，高姐就這樣開始從賣
-                                            玉蘭花變成賣雜誌。「跟賣玉蘭花比起來，賣雜誌還是不錯啦！而且在這附近
-                                            的辦公人員很多，他們也都很支持，月初的時候都會固定來跟我買。」如果和
-                                            玉蘭花相較起來，最大的差異是雜誌的壽命比較長，至少可以賣一個月，就算
-                                            過期了還是可以繼續賣，但是玉蘭花僅有一天的壽命，如果沒賣完，就只能拿
-                                            去祭拜土地公了。高姐說：「買玉蘭花的客人鼻子都很精呢，隔夜的玉蘭花客
-                                            人就不要了，花的賣相也不好看，所以當天花沒賣完就虧了！」</p>
-                                        <p>「玉蘭花我已經賣四年了，都在台北車站或台大醫院西址這一帶，每天清晨大
-                                            約三、四點就去批花，每次大概批兩三百朵吧，然後自己再花一個多小時串成
-                                            一串一串，大約六點多就到這附近來賣花，賣到十點多就差不多收工了，休息
-                                            一下後，中午再開始賣雜誌，每天都還滿規律的。」這一年來，平常早上除了
-                                            賣玉蘭花，下午又多了一份賣雜誌的工作，這樣一來生活的收入開始有明顯的
-                                            改善，之前僅靠賣玉蘭花的收入，對高姐來說相當微薄。「為了還願吧！當時
-                                            
-                                            在友人的指點下開始賣玉蘭花，有施有得，心境也比較開朗些，生活也過得比
-                                            較順。未來還是要繼續還願，繼續賣玉蘭花。」高姐帶有宗教玄機的口吻說著。
-                                            「好了，警察已經走了，我要開始賣雜誌了！」高姐又環視了一下台大捷運站
-                                            四周的人行道，確定沒有警察後，開始了她今天的第二份工作。</p>
-                        
+                                        <p>週五的中午，台大醫院站二號出口有許多正要去吃午餐的人潮，高姐並沒有站在明顯的位置，她坐在捷運站出口旁的矮牆上，若不仔細找還很難發現她。「我先休息一下，那裡有警察在巡邏，為了避免不必要的麻煩還是先收起來好了！」高姐小聲地說著尷尬的處境。已經來台大醫院站販售雜誌近一年的高姐，其實並沒有遇到太多的糾舉，如果可能的話，只要一發現有警察或站務人員走進，她就會先低調地閃避。
+                                        </p>
+                                        <p>「當初會來賣雜誌是因為在台大醫院這裡遇到一位販售員，我當時在附近賣玉蘭花，然後看他賣得很不錯，就問他要怎麼做這份工作。」大約一年前，高姐遇到販售員子承，子承就帶她到雜誌社初步瞭解工作內容，高姐就這樣開始從賣玉蘭花變成賣雜誌。「跟賣玉蘭花比起來，賣雜誌還是不錯啦！而且在這附近的辦公人員很多，他們也都很支持，月初的時候都會固定來跟我買。」如果和玉蘭花相較起來，最大的差異是雜誌的壽命比較長，至少可以賣一個月，就算過期了還是可以繼續賣，但是玉蘭花僅有一天的壽命，如果沒賣完，就只能拿去祭拜土地公了。高姐說：「買玉蘭花的客人鼻子都很精呢，隔夜的玉蘭花客人就不要了，花的賣相也不好看，所以當天花沒賣完就虧了！」
+                                        </p>
+                                        <p>「玉蘭花我已經賣四年了，都在台北車站或台大醫院西址這一帶，每天清晨大約三、四點就去批花，每次大概批兩三百朵吧，然後自己再花一個多小時串成一串一串，大約六點多就到這附近來賣花，賣到十點多就差不多收工了，休息一下後，中午再開始賣雜誌，每天都還滿規律的。」這一年來，平常早上除了賣玉蘭花，下午又多了一份賣雜誌的工作，這樣一來生活的收入開始有明顯的改善，之前僅靠賣玉蘭花的收入，對高姐來說相當微薄。「為了還願吧！當時在友人的指點下開始賣玉蘭花，有施有得，心境也比較開朗些，生活也過得比較順。未來還是要繼續還願，繼續賣玉蘭花。」高姐帶有宗教玄機的口吻說著。「好了，警察已經走了，我要開始賣雜誌了！」高姐又環視了一下台大捷運站四周的人行道，確定沒有警察後，開始了她今天的第二份工作。
+                                        </p>
+                                        <p></p>
+
                                     </div>
                                 </div>
                             </article>
@@ -138,7 +117,9 @@
 
         <div class="asideBar">
             <div class="asideLogo">
-                <a href="index.html"><img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/logo/Nav_logo-01.png?raw=true" alt="Aside Big Issue Logo"></a>
+                <a href="index.html"><img
+                        src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/logo/Nav_logo-01.png?raw=true"
+                        alt="Aside Big Issue Logo"></a>
             </div>
             <nav>
                 <h2>Aside Navigation</h2>
@@ -153,10 +134,10 @@
                         <a href="index.html#aboutId">關於大誌</a>
                     </li>
                     <li>
-                        <a href="#">訂閱支持</a>
+                        <a href="index.html#supportId">訂閱支持</a>
                     </li>
                     <li>
-                        <a href="#">販售場所</a>
+                        <a href="index.html#salePointsId">販售場所</a>
                     </li>
                 </ul>
             </nav>
@@ -168,28 +149,25 @@
                 <ul class="footerInfo">
                     <li>
                         <div class="fooerLogo">
-                            <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/01-PC/07-footer/fotterLogo.png?raw=true"
-                                alt="">
+                            <a href="index.html"><img a src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/01-PC/07-footer/fotterLogo.png?raw=true"
+                                alt=""></a>
                         </div>
                     </li>
                     <li>
                         <ul class="footerSocial">
                             <li>
-                                <a href="#">
-                                    <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_fb.svg"
-                                        alt="">
+                                <a href="https://zh-tw.facebook.com/bigissue.tw">
+                                    <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_fb.svg" alt="">
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
-                                    <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_ig.svg"
-                                        alt="">
+                                <a href="https://www.instagram.com/bigissue.tw/">
+                                    <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_ig.svg" alt="">
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
-                                    <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_email.svg"
-                                        alt="">
+                                <a href="mailto:service@bigissue.tw">
+                                    <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_email.svg" alt="">
                                 </a>
                             </li>
                         </ul>
