--- a/story_TaipeiYuanshan.html
+++ b/story_TaipeiYuanshan.html
@@ -20,7 +20,7 @@
     <meta property="og:side_name" content="">
     <meta property="fb:app_id" content="">
 
-    <title>Story Taichung Eslite</title>
+    <title>Story Taipei Yuanshan</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
@@ -60,20 +60,20 @@
                         <div class="storyContent">
                             <ol class="storyBreadCrumb">
                                 <li>
-                                    <a href="#"><span>HOME</span></a>
+                                    <a href="index.html"><span>HOME</span></a>
                                 </li>
                                 <li>
                                     <i class="fas fa-caret-right"></i>
                                 </li>
                                 <li>
-                                    <a href="#"><span>北部地區</span></a>
+                                    <a href="story_northArea.html"><span>北部地區</span></a>
                                 </li>
                                 <li>
                                     <i class="fas fa-caret-right"></i>
                                 </li>
                                 <!-- 區域所在位置名稱 -->
                                 <li>
-                                    <a href="#"><span>台北捷運圓山站</span></a>
+                                    <a href="story_TaipeiYuanshan.html"><span>台北捷運圓山站</span></a>
                                 </li>
                             </ol>
                             <article>
@@ -91,39 +91,25 @@
                                         </div>
                                         <div class="picTxt">
                                             <!-- 文字要改 -->
-                                            <p>「這工作是朋友幫我上網找的，她跟我說可以去試試看，後來面試後就先實習，實習過了
-                                                就一直都在圓山站賣雜誌了。我每天一定都會出來賣雜誌，我很喜歡出來外面走一走，因
-                                                為之前被關在家裡太久了，現在因為這工作讓我可以每天都自由出來，所以我做得很開心
-                                                。」</p>
+                                            <p>「這工作是朋友幫我上網找的，她跟我說可以去試試看，後來面試後就先實習，實習過了就一直都在圓山站賣雜誌了。我每天一定都會出來賣雜誌，我很喜歡出來外面走一走，因為之前被關在家裡太久了，現在因為這工作讓我可以每天都自由出來，所以我做得很開心。」
+                                            </p>
                                             <p class="salesName">台北捷運圓山站 / 秋燕</p>
                                         </div>
                                     </div>
                                     <div class="storyTxtContent">
                                         <!-- 段落文字要改 -->
-                                        <p>台北 7 月夏日的午後十分炎熱，非假日的圓山站人潮不多，走出二號出口後卻未見販售員
-                                            秋燕。一位熱心的麻糬阿姨跟我說她在另一個方向，因為西曬嚴重暫時到另一側避暑。</p>
+                                        <p>台北 7
+                                            月夏日的午後十分炎熱，非假日的圓山站人潮不多，走出二號出口後卻未見販售員秋燕。一位熱心的麻糬阿姨跟我說她在另一個方向，因為西曬嚴重暫時到另一側避暑。
+                                        </p>
                                         <p>秋燕從去年 11 月開始賣雜誌，因從小患有腦性麻痺，所以外出都需要靠電動輪椅代步
-                                            。「這工作是朋友幫我上網找的，她跟我說可以去試試看，後來面試後就先實習，實習過
-                                            了就一直都在圓山站賣雜誌了。」最初秋燕也是很擔心自己的身體狀況無法做好這工作，
-                                            但現在已經得心應手了，每天早上六點起床，從淡水搭捷運到圓山站，約早上八點一直賣
-                                            到下午五點才搭車回家，除非天候狀況不佳，不然秋燕每天都會來圓山站賣雜誌。「我每
-                                            天一定都會出來賣雜誌，我很喜歡出來外面走一走，因為之前被關在家裡太久了，現在因
-                                            為這工作讓我可以每天都自由出來，所以我做得很開心。」秋燕笑得很樂。</p>
-                                        <p>以前秋燕完全沒有做過任何工作，她說自己試圖找過許多工作，但都沒公司要聘雇她，因
-                                            為都是要熟悉電腦文書作業或是四肢健全的清潔工作，這些對平常人看似最基本的能力要
-                                            求，對秋燕來說卻難如登天。「還好當初朋友熱心幫我找這工作，讓我可以真正地走到外
-                                            面來接近人群，讓我可以不用一輩子跟家人伸手要錢，也可以不用一直賴在家裡。」秋燕
-                                            對於自己未來是比家人更憂心，最終她還是要自己照顧自己，所以能早一點獨立並累積社
-                                            會歷練，對她是更有幫助的。</p>
-                                        <p>「剛開始出來賣雜誌的時候爸媽都很擔心，他們怕我遇到詐騙集團，也會怕我一人在外面
-                                            無法自理或被欺負，但現在應該都放心了，不過有時候太晚回去他們都還是會很焦慮。」
-                                            秋燕的家人也曾來看她賣雜誌的情形，自幼被呵護照顧的秋燕如今可以找到一份合宜的差
-                                            事，家人應該會安心許多。「哈，媽媽最近都說我曬太黑了，要多休息不要太過操勞。」
-                                            確實很黝黑的秋燕笑著說。</p>
+                                            。「這工作是朋友幫我上網找的，她跟我說可以去試試看，後來面試後就先實習，實習過了就一直都在圓山站賣雜誌了。」最初秋燕也是很擔心自己的身體狀況無法做好這工作，但現在已經得心應手了，每天早上六點起床，從淡水搭捷運到圓山站，約早上八點一直賣到下午五點才搭車回家，除非天候狀況不佳，不然秋燕每天都會來圓山站賣雜誌。「我每天一定都會出來賣雜誌，我很喜歡出來外面走一走，因為之前被關在家裡太久了，現在因為這工作讓我可以每天都自由出來，所以我做得很開心。」秋燕笑得很樂。
+                                        </p>
+                                        <p>以前秋燕完全沒有做過任何工作，她說自己試圖找過許多工作，但都沒公司要聘雇她，因為都是要熟悉電腦文書作業或是四肢健全的清潔工作，這些對平常人看似最基本的能力要求，對秋燕來說卻難如登天。「還好當初朋友熱心幫我找這工作，讓我可以真正地走到外面來接近人群，讓我可以不用一輩子跟家人伸手要錢，也可以不用一直賴在家裡。」秋燕對於自己未來是比家人更憂心，最終她還是要自己照顧自己，所以能早一點獨立並累積社會歷練，對她是更有幫助的。
+                                        </p>
+                                        <p>「剛開始出來賣雜誌的時候爸媽都很擔心，他們怕我遇到詐騙集團，也會怕我一人在外面無法自理或被欺負，但現在應該都放心了，不過有時候太晚回去他們都還是會很焦慮。」秋燕的家人也曾來看她賣雜誌的情形，自幼被呵護照顧的秋燕如今可以找到一份合宜的差事，家人應該會安心許多。「哈，媽媽最近都說我曬太黑了，要多休息不要太過操勞。」確實很黝黑的秋燕笑著說。
+                                        </p>
                                         <p>
-                                            時間是下午四點多，距離結束販售雜誌的時間還有一個多小時，秋燕說今天只賣了三本，
-                                            書包裡還有庫存所以要再努力一下，雖然太陽真的很大。她重新啟動電動輪椅的開關，轉
-                                            動一下方向儀，移動到會有路人經過的地方，繼續享受著戶外自由的陽光和自在的心情。
+                                            時間是下午四點多，距離結束販售雜誌的時間還有一個多小時，秋燕說今天只賣了三本，書包裡還有庫存所以要再努力一下，雖然太陽真的很大。她重新啟動電動輪椅的開關，轉動一下方向儀，移動到會有路人經過的地方，繼續享受著戶外自由的陽光和自在的心情。
                                         </p>
 
                                     </div>
@@ -137,7 +123,9 @@
 
         <div class="asideBar">
             <div class="asideLogo">
-                <a href="index.html"><img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/logo/Nav_logo-01.png?raw=true" alt="Aside Big Issue Logo"></a>
+                <a href="index.html"><img
+                        src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/logo/Nav_logo-01.png?raw=true"
+                        alt="Aside Big Issue Logo"></a>
             </div>
             <nav>
                 <h2>Aside Navigation</h2>
@@ -152,10 +140,10 @@
                         <a href="index.html#aboutId">關於大誌</a>
                     </li>
                     <li>
-                        <a href="#">訂閱支持</a>
+                        <a href="index.html#supportId">訂閱支持</a>
                     </li>
                     <li>
-                        <a href="#">販售場所</a>
+                        <a href="index.html#salePointsId">販售場所</a>
                     </li>
                 </ul>
             </nav>
@@ -167,28 +155,26 @@
                 <ul class="footerInfo">
                     <li>
                         <div class="fooerLogo">
-                            <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/01-PC/07-footer/fotterLogo.png?raw=true"
-                                alt="">
+                            <a href="index.html"><img a src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/01-PC/07-footer/fotterLogo.png?raw=true"
+                                alt=""></a>
+                            
                         </div>
                     </li>
                     <li>
                         <ul class="footerSocial">
                             <li>
-                                <a href="#">
-                                    <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_fb.svg"
-                                        alt="">
+                                <a href="https://zh-tw.facebook.com/bigissue.tw">
+                                    <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_fb.svg" alt="">
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
-                                    <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_ig.svg"
-                                        alt="">
+                                <a href="https://www.instagram.com/bigissue.tw/">
+                                    <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_ig.svg" alt="">
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
-                                    <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_email.svg"
-                                        alt="">
+                                <a href="mailto:service@bigissue.tw">
+                                    <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_email.svg" alt="">
                                 </a>
                             </li>
                         </ul>
